crates/llvmkit-ir/tests/compile_fail/retained_open_phi_cannot_add_after_finish.stderr
error[E0382]: use of moved value: `phi`
  --> tests/compile_fail/retained_open_phi_cannot_add_after_finish.rs:19:17
   |
16 |         let phi = b.build_int_phi::<i32, _>("p").unwrap();
   |             --- move occurs because `phi` has type `PhiInst<'_, i32, llvmkit_ir::Open, Brand<'_>>`, which does not implement the `Copy` trait
17 |
18 |         let _closed = phi.finish();
   |                           -------- `phi` moved due to this method call
19 |         let _ = phi.add_incoming(1_i32, entry_label);
   |                 ^^^ value used here after move
   |
note: `PhiInst::<'ctx, W, llvmkit_ir::Open, B>::finish` takes ownership of the receiver `self`, which moves `phi`
  --> src/instructions.rs
   |
   |     pub fn finish(self) -> PhiInst<'ctx, W, Closed, B> {
   |                   ^^^^
